...
                android:fontFamily="sans-serif-medium"
                android:text="Like"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnComment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
...
