...
            <TextView
                style="@style/Kin.Text.Heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:text="Comments" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/bg_chip"
                android:gravity="center_vertical"
...
